--- a/dhanu. html.html
+++ b/dhanu. html.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!--Add your profile picture here -->
-            <img src="" alt="Your Profile Picture" class="profile-picture">
+            <img src="Snapchat-570308343.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>Dhanusha S</h1>
             <p>STUDENT</p>
         </div>
